* Comment the heck outta stuff so i can remember what i did * Shift linked JS from header to footer. Confirm need to link jquery. * make a nice bootstrap navbar and adjust CSS to make it work with the fixed footer

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 
-body {
-    margin: 0 0 80px 0;
-}
+/* to accommodate both the wordpress admin bar and the bootstrap navbar */
+body { margin: 70px 0 80px 0; }
+.navbar-fixed-top { top: 32px; }
+.navbar-inverse { background-image: linear-gradient(to bottom, indigo, darkblue)}
 
 .footer-fixed-bottom {
     position: fixed;
@@ -15,6 +16,7 @@ body {
     border-top: 1px solid darkblue;
 }
 
+/* cannot use bg-danger on a jumbotron as it overrides the background. */
 .jumbotron-danger {
     background-color: lightpink;
     border: 1px solid darkred;
